WebCore/rendering/RenderEmbeddedObject.h
@@ -27,6 +27,8 @@
 
 namespace WebCore {
 
+class MouseEvent;
+
 // Renderer for embeds and objects, often, but not always, rendered via plug-ins.
 // For example, <embed src="foo.html"> does not invoke a plug-in.
 class RenderEmbeddedObject : public RenderPart {
@@ -40,6 +42,8 @@ public:
     bool showsMissingPluginIndicator() const { return m_showsMissingPluginIndicator; }
 
     bool hasFallbackContent() const { return m_hasFallbackContent; }
+
+    void handleMissingPluginIndicatorEvent(Event*);
 
 #if USE(ACCELERATED_COMPOSITING)
     virtual bool allowsAcceleratedCompositing() const;
@@ -58,10 +62,16 @@ private:
 
     virtual void layout();
     virtual void viewCleared();
+    
+    void setMissingPluginIndicatorIsPressed(bool);
+    bool isInMissingPluginIndicator(MouseEvent*);
+    bool getReplacementTextGeometry(int tx, int ty, FloatRect& contentRect, Path&, FloatRect& replacementTextRect, Font&, TextRun&, float& textWidth);
 
     String m_replacementText;
     bool m_hasFallbackContent;
     bool m_showsMissingPluginIndicator;
+    bool m_missingPluginIndicatorIsPressed;
+    bool m_mouseDownWasInMissingPluginIndicator;
 };
 
 inline RenderEmbeddedObject* toRenderEmbeddedObject(RenderObject* object)
