third_party/WebKit/WebKit/mac/WebCoreSupport/WebChromeClient.h
@@ -106,6 +106,7 @@ public:
     virtual void setStatusbarText(const WebCore::String&);
 
     virtual void scrollbarsModeDidChange() const { }
+    virtual bool shouldMissingPluginMessageBeButton() const;
     virtual void missingPluginButtonClicked(WebCore::Element*) const;
     virtual void mouseDidMoveOverElement(const WebCore::HitTestResult&, unsigned modifierFlags);
 
