third_party/WebKit/WebKitTools/DumpRenderTree/win/UIDelegate.h
@@ -38,7 +38,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 class DRTUndoManager;
 class DRTDesktopNotificationPresenter;
 
-class UIDelegate : public IWebUIDelegate2, IWebUIDelegatePrivate {
+class UIDelegate : public IWebUIDelegate2, IWebUIDelegatePrivate3 {
 public:
     UIDelegate();
 
@@ -325,6 +325,14 @@ public:
         /* [in] */ IWebView *webView,
         /* [in] */ HDC hDC,
         /* [in] */ RECT rect);
+
+    virtual HRESULT STDMETHODCALLTYPE createWebViewWithRequest(IWebView* sender, IWebURLRequest* request, IPropertyBag* windowFeatures, IWebView** newWebView);
+
+    virtual HRESULT STDMETHODCALLTYPE drawBackground(IWebView* sender, OLE_HANDLE hdc, const RECT* dirtyRect);
+
+    virtual HRESULT STDMETHODCALLTYPE decidePolicyForGeolocationRequest(IWebView* sender, IWebFrame* frame, IWebSecurityOrigin* origin, IWebGeolocationPolicyListener* listener);
+
+    virtual HRESULT STDMETHODCALLTYPE didPressMissingPluginButton(IDOMElement*);
 
 protected:
     // IWebUIDelegatePrivate
